# tado

./: CHANGELOG.md  Cargo.toml  Makefile.ci.toml  Makefile.local.toml  Makefile.toml  README.md
.github/: .kodiak.toml  dependabot.yml
.github/workflows/: ci.yml  release.yml
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
src/: cnf.rs  data.rs  lib.rs
