[package]
name = "tado"
description = "A simple library to interact with the Tado API"
version = "0.1.0"

license = "Apache-2.0"
repository = "https://github.com/mossida/tado"

edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
