workspace = { members = ["examples/basic"] }
[package]
name = "tado"
description = "A simple library to interact with the Tado API"
version = "0.1.0"

license = "Apache-2.0"
repository = "https://github.com/mossida/tado"

edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { version = "1.0.58" }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
oauth2 = { version = "4.4.2" }
phf = { version = "0.11.2" }
serde = { version = "1.0.179" }
serde_json = { version = "1.0.115" }
strum = { version = "0.26.2", features = ["derive"] }
